# learnrustgamedev

./: Cargo.toml  README.md
flappy-bird/: Cargo.toml
flappy-bird/src/: components.rs  input.rs  main.rs  types.rs
flappy-bird/src/scenes/: countdown.rs  mod.rs  play.rs  score.rs  title.rs
flappy-bird/src/systems/: mod.rs  parallax.rs  physics.rs  pipe.rs  player.rs  render.rs  score.rs
ggez-extras/: Cargo.toml
ggez-extras/src/: input.rs  lib.rs  logging.rs  scene.rs  util.rs
pong/: Cargo.toml
pong/src/: components.rs  input.rs  main.rs  types.rs
pong/src/scenes/: base.rs  mod.rs  play.rs  serve.rs  start.rs  won.rs
pong/src/systems/: ball.rs  bounce.rs  mod.rs  paddle.rs  score.rs  winner.rs
