[package]
name = "ggez-extras"
version = "0.1.0"
authors = ["Tommy Maintz <tommy.maintz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"
log = "0.4"
fern = {version = "0.5", features = ["colored"]}
chrono = "0.4"
